# agenttim

./: .gitignore  README.md  __init__.py
evaluation/: Versuchsmatrix_AgentTim.xlsx  Versuchsmatrix_AgentTim_v2.xlsx  Versuchsmatrix_AgentTim_v3.xlsx  pyproject.toml
evaluation/dashboard/: streamlit_eval.py
evaluation/eval_utils/: __init__.py  argument_correctness.py  base_evaluator.py  bfcl_checker.py  clarification_metric.py  constants.py  efficiency.py  multi_agent_metrics.py  multi_agent_tool_tracker.py  result_saver.py  subset_tool_correctness.py  templates.py  test_case_adapters.py  test_case_models.py  token_tracker.py  tool_sampler.py  tool_tracker.py  utils.py
evaluation/evaluationscripts/: analyze_results.py  evaluate_bfcl_multiturn.py  evaluate_mcpagentbench.py  run_all.py
evaluation/examples/: multi_agent_metrics_example.py  test_multi_agent_metrics.py
evaluation/plots/5_1_core_comparison/: 5_1_core_comparison_tables.tex  5_1_pairwise_tables.tex  5_1_scaling_tables.tex
evaluation/plots/5_2_kosten_tokens/: 5_2_kosten_tokens_tables.tex  5_2_token_scaling_tables.tex
evaluation/plots/5_3_latenz/: 5_3_latenz_scaling_tables.tex  5_3_latenz_tables.tex
evaluation/plots/5_4_benchmark_spezifisch/: 5_4_benchmark_tables.tex  5_4_task_types_tables.tex
evaluation/plots/5_5_fehleranalyse/: 5_5_fehleranalyse_tables.tex
evaluation/results_enriched/: statistical_tests.json
evaluation/scripts/: convert_bfcl.py  convert_mcpagentbench.py  enrich_results.py  evaluate_orchestrator_bfcl.py  export_results_to_excel.py  generate_all_tables.py  generate_chapter_texts.py  generate_cost_tables.py  generate_latex_tables.py  generate_scaling_tables.py  plot_all_chapters.py  plot_core_comparison.py  plot_core_comparison_v2.py  plot_cost_efficiency.py  plot_deepseek_tokens.py  plot_errors.py  plot_final_state.py  plot_latency.py  plot_results.py  plot_scaling_v2.py  plot_task_types.py  plot_thesis_chapter5.py  rescore_403_errors.py  statistical_tests.py  update_versuchsmatrix.py
evaluation/test_cases/: __init__.py  argument_correctness_cases.py  bfcl_loader.py  mcpagentbench_loader.py  schemas.py
mcpservers/mcpagentbench/: __init__.py  domain_config.py  generate_servers.py  main.py  pyproject.toml
multiagents/mcpagentbenchOrchestrator/: __init__.py  main.py  pyproject.toml
(+682 files in other folders)
