[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = "DeepEval evaluations for AgentTim agents"
authors = ["Tim Lodes"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
deepeval = "^3.9"
langchain = "^1.2.15"
langchain-openai = "^1.0.0"
langgraph = "^1.0.0"
langchain-mcp-adapters = "^0.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
junelibrary = { path = "../../junelibrary", develop = true }
streamlit = "^1.56.0"
pandas = "^3.0.2"
openpyxl = "^3.1.5"
altair = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
