[tool.poetry]
name = "mcpagentbench"
version = "0.1.0"
description = "Combined MCP server for MCPAgentBench - 16 domain-specific tool servers with mock implementations"
authors = ["JUNE Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
mcp = {extras = ["cli"], version = "^1.13.0"}
fastmcp = "^2.11.3"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0"
ruff = "^0.11.13"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = ["__init__.py"]

[tool.black]
line-length = 88
