[tool.poetry]
name = "mcpagentbench-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for MCPAgentBench (Option A: 1 Agent = 1 MCP Server)"
authors = ["Tim Lodes"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
langchain = "^1.0.0"
langchain-openai = "^1.0.0"
langgraph = "^1.0.0"
langchain-mcp-adapters = "^0.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
junelibrary = { path = "../../../junelibrary", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0"
ruff = "^0.11.13"
black = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
exclude = ["__init__.py"]

[tool.black]
line-length = 88
